Fix bugs and make runnable as Docker image